<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CarrinhoActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textTitleCompras"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:text="@string/txtValorTotal" />

                <TextView
                    android:id="@+id/idTxtValorTotal"
                    android:layout_width="70dp"
                    android:textSize="16dp"
                    android:layout_height="21dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/txtFormasPag"
                android:textStyle="bold"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/idFormaPag_cartao"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/txtFormaPag_cartao" />

                <CheckBox
                    android:id="@+id/idFormaPag_boleto"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/txtFormaPag_boleto" />

                <CheckBox
                    android:id="@+id/idFormaPag_pix"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/txtFormaPag_pix" />

            </LinearLayout>


            <EditText
                android:id="@+id/txtIdCupomDesc"
                android:layout_width="254dp"
                android:layout_height="44dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:hint="@string/txtCumpoDesconto"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idFormaPag_boleto" />

            <Button
                android:id="@+id/idBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="Finalizar Compra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>